<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.spondulix.ngo.default2"
    android:background="@drawable/default2">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picupld"
        android:textStyle="bold"
        android:id="@+id/btnPicture"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc"
        android:textStyle="bold"
        android:id="@+id/btnLocation"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/btnPicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Description"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/tvDescription"
        android:layout_below="@+id/btnLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/etDescription"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/tvDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:textStyle="bold"
        android:id="@+id/submit"
        android:layout_below="@+id/etDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:background="@drawable/unhygienic"
        android:layout_alignTop="@+id/btnPicture"
        android:layout_alignRight="@+id/etDescription"
        android:layout_alignEnd="@+id/etDescription"
        android:layout_toEndOf="@+id/submit"
        android:layout_alignBottom="@+id/btnLocation"
        android:layout_toRightOf="@+id/submit"
        android:visibility="invisible"/>

</RelativeLayout>
