<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/default2"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home"
    android:orientation="vertical">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Owned"
        android:id="@+id/owned"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/usern"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/New"
        android:id="@+id/problem"
        android:layout_alignTop="@+id/owned"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/usern"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Donate"
        android:id="@+id/donate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/owned"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/donate">

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton1"
            android:background="@drawable/child1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/link"
            android:background="@drawable/drain1"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton3"
            android:background="@drawable/eve"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PRIORTIZE"
            android:id="@+id/button"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PRIORTIZE"
            android:id="@+id/btn"
            android:layout_alignTop="@+id/link"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PRIORTIZE"
            android:id="@+id/button3"
            android:layout_alignTop="@+id/imageButton3"
            android:layout_alignLeft="@+id/btn"
            android:layout_alignStart="@+id/btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="33dp"
            android:layout_marginEnd="33dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/prt"
            android:layout_alignBottom="@+id/btn"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/textView5"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignLeft="@+id/prt"
            android:layout_alignStart="@+id/prt"
            android:textStyle="bold"
            />
    </RelativeLayout>
</RelativeLayout>
